--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
   <link href="styles/settings.css" media="screen" rel="stylesheet">
   <link href="styles/jquery.bxslider.css" rel="stylesheet"/>
   <link href="styles/style-metronic.css" rel="stylesheet" type="text/css"/>
+  <link href="styles/bootstrap-editable.css" rel="stylesheet" type="text/css"/>
   <link href="styles/style.css" rel="stylesheet" type="text/css"/>
   <link href="styles/blue.css" rel="stylesheet" type="text/css"/>
   <link href="styles/style-responsive.css" rel="stylesheet" type="text/css"/>
@@ -121,6 +122,7 @@
 <script src="scripts/libs/jquery.themepunch.plugins.min.js" type="text/javascript"></script>
 <script src="scripts/libs/jquery.themepunch.revolution.min.js" type="text/javascript"></script>
 <script src="scripts/libs/jquery.bxslider.min.js" type="text/javascript"></script>
+<script src="scripts/libs/bootstrap-editable.min.js" type="text/javascript"></script>
 <script src="scripts/libs/appTemplate.js"></script>
 <script src="scripts/libs/index.js"></script>
 <script src="scripts/app.js"></script>
