--- a/app/index.html
+++ b/app/index.html
@@ -135,6 +135,7 @@
 <script src="scripts/services/sessionService.js"></script>
 <script src="scripts/services/httpService.js"></script>
 <script src="scripts/services/userService.js"></script>
+<script src="scripts/services/searchService.js"></script>
 <script>
   window.fbAsyncInit = function () {
     FB.init({
