Envio parametros en busqueda en search

--- a/app/index.html
+++ b/app/index.html
@@ -130,6 +130,7 @@
 <script src="scripts/controllers/login.js"></script>
 <script src="scripts/controllers/register.js"></script>
 <script src="scripts/controllers/user.js"></script>
+<script src="scripts/controllers/search.js"></script>
 <script src="scripts/services/configService.js"></script>
 <script src="scripts/services/securityService.js"></script>
 <script src="scripts/services/sessionService.js"></script>
