--- a/app/index.html
+++ b/app/index.html
@@ -13,11 +13,13 @@
   <link href="styles/jquery.bxslider.css" rel="stylesheet"/>
   <link href="styles/style-metronic.css" rel="stylesheet" type="text/css"/>
   <link href="styles/bootstrap-editable.css" rel="stylesheet" type="text/css"/>
+  <link href="styles/angular-toastr.min.css" rel="stylesheet" type="text/css"/>
   <link href="styles/style.css" rel="stylesheet" type="text/css"/>
   <link href="styles/blue.css" rel="stylesheet" type="text/css"/>
   <link href="styles/style-responsive.css" rel="stylesheet" type="text/css"/>
   <link href="styles/main.css" rel="stylesheet" type="text/css"/>
   <link href="favicon.ico" rel="shortcut icon"/>
+
 </head>
 <body ng-app="hubinFrontendApp">
 <!--[if lte IE 8]>
@@ -123,6 +125,7 @@
 <script src="scripts/libs/jquery.themepunch.revolution.min.js" type="text/javascript"></script>
 <script src="scripts/libs/jquery.bxslider.min.js" type="text/javascript"></script>
 <script src="scripts/libs/bootstrap-editable.min.js" type="text/javascript"></script>
+<script src="scripts/libs/angular-toastr.min.js" type="text/javascript"></script>
 <script src="scripts/libs/appTemplate.js"></script>
 <script src="scripts/libs/index.js"></script>
 <script src="scripts/app.js"></script>
