Termino los filtros de la pantalla de busqueda

--- a/app/index.html
+++ b/app/index.html
@@ -140,6 +140,12 @@
 <script src="scripts/services/httpService.js"></script>
 <script src="scripts/services/userService.js"></script>
 <script src="scripts/services/searchService.js"></script>
+<script src="scripts/services/subjectService.js"></script>
+<script src="scripts/services/levelService.js"></script>
+<script src="scripts/services/languageService.js"></script>
+<script src="scripts/services/entityService.js"></script>
+<script src="scripts/services/documentService.js"></script>
+
 <script>
   window.fbAsyncInit = function () {
     FB.init({
