--- a/app/index.html
+++ b/app/index.html
@@ -93,6 +93,7 @@
         <p>
           <span class="margin-right-10">Hubin 2018©. Todos los derechos reservados.</span>
           <a href="#">Políticas de privacidad</a> | <a href="#">Términos y condiciones</a>
+
         </p>
       </div>
       <div class="col-md-4 col-sm-4">
@@ -105,7 +106,6 @@
     </div>
   </div>
 </div>
-
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
@@ -117,6 +117,8 @@
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 <script src="bower_components/angular-touch/angular-touch.js"></script>
+<script src="bower_components/angular-translate/angular-translate.js"></script>
+<script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
 <script src="scripts/libs/jquery-migrate-1.2.1.min.js" type="text/javascript"></script>
 <script src="scripts/libs/hover-dropdown.js" type="text/javascript"></script>
 <script src="scripts/libs/back-to-top.js" type="text/javascript"></script>
@@ -172,5 +174,6 @@
     AppTemplate.init();
   });
 </script>
+
 </body>
 </html>
