Subo pagina de entidades educativas. Fixeo algunos bugs

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
   your browser</a> to improve your experience.</p>
 <![endif]-->
 
-<div class="header navbar navbar-default navbar-static-top">
+<div id="mainHeader" class="header navbar navbar-default navbar-static-top">
   <div class="container">
     <div class="navbar-header">
       <button class="navbar-toggle btn navbar-btn" data-toggle="collapse" data-target=".navbar-collapse">
@@ -145,6 +145,7 @@
 <script src="scripts/controllers/register.js"></script>
 <script src="scripts/controllers/user.js"></script>
 <script src="scripts/controllers/search.js"></script>
+<script src="scripts/controllers/entity.js"></script>
 <script src="scripts/services/configService.js"></script>
 <script src="scripts/services/securityService.js"></script>
 <script src="scripts/services/sessionService.js"></script>
