--- a/app/index.html
+++ b/app/index.html
@@ -146,6 +146,8 @@
 <script src="scripts/controllers/user.js"></script>
 <script src="scripts/controllers/search.js"></script>
 <script src="scripts/controllers/entity.js"></script>
+<script src="scripts/controllers/subject.js"></script>
+
 <script src="scripts/services/configService.js"></script>
 <script src="scripts/services/securityService.js"></script>
 <script src="scripts/services/sessionService.js"></script>
