Pantalla de carga de documentos. Faltan validaciones e integrar con el back

--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,9 @@
               <a href="/#/user">{{'header.my_profile'| translate }}</a>
             </li>
             <li>
+              <a href="/#/document/new">{{'header.load_document'| translate }}</a>
+            </li>
+            <li>
               <a class="logout" ng-click="logout()">{{'header.logout'| translate }}</a>
             </li>
           </ul>
@@ -147,6 +150,8 @@
 <script src="scripts/controllers/search.js"></script>
 <script src="scripts/controllers/entity.js"></script>
 <script src="scripts/controllers/subject.js"></script>
+<script src="scripts/controllers/document.js"></script>
+
 
 <script src="scripts/services/configService.js"></script>
 <script src="scripts/services/securityService.js"></script>
