--- a/app/index.html
+++ b/app/index.html
@@ -150,6 +150,7 @@
 <script src="scripts/controllers/search.js"></script>
 <script src="scripts/controllers/entity.js"></script>
 <script src="scripts/controllers/subject.js"></script>
+<script src="scripts/controllers/documentEdit.js"></script>
 <script src="scripts/controllers/document.js"></script>
 
 
