--- a/app/index.html
+++ b/app/index.html
@@ -143,6 +143,9 @@
 <script src="scripts/libs/appTemplate.js"></script>
 <script src="scripts/libs/index.js"></script>
 <script src="scripts/app.js"></script>
+
+<script src="scripts/directives/documentItem.js"></script>
+
 <script src="scripts/controllers/main.js"></script>
 <script src="scripts/controllers/login.js"></script>
 <script src="scripts/controllers/register.js"></script>
