--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
   <link href="styles/angular-toastr.min.css" rel="stylesheet" type="text/css"/>
   <link href="styles/style.css" rel="stylesheet" type="text/css"/>
   <link href="styles/blue.css" rel="stylesheet" type="text/css"/>
-  <link href="styles/style-responsive.css" rel="stylesheet" type="text/css"/>
+  <link href="styles/style-responsive.css" rel="stylesheet" />
   <link href="styles/main.css" rel="stylesheet" type="text/css"/>
   <link href="favicon.ico" rel="shortcut icon"/>
 
@@ -121,6 +121,7 @@
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+
 <script src="bower_components/angular-animate/angular-animate.js"></script>
 <script src="bower_components/angular-aria/angular-aria.js"></script>
 <script src="bower_components/angular-cookies/angular-cookies.js"></script>
@@ -131,6 +132,7 @@
 <script src="bower_components/angular-touch/angular-touch.js"></script>
 <script src="bower_components/angular-translate/angular-translate.js"></script>
 <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
+<script src="bower_components/angular-material/angular-material.js"></script>
 <script src="scripts/libs/jquery-migrate-1.2.1.min.js" type="text/javascript"></script>
 <script src="scripts/libs/hover-dropdown.js" type="text/javascript"></script>
 <script src="scripts/libs/back-to-top.js" type="text/javascript"></script>
@@ -139,6 +141,7 @@
 <script src="scripts/libs/jquery.themepunch.revolution.min.js" type="text/javascript"></script>
 <script src="scripts/libs/jquery.bxslider.min.js" type="text/javascript"></script>
 <script src="scripts/libs/bootstrap-editable.min.js" type="text/javascript"></script>
+<script src="scripts/libs/ui-bootstrap-tpls-2.5.0.js" type="text/javascript"></script>
 <script src="scripts/libs/angular-toastr.min.js" type="text/javascript"></script>
 <script src="scripts/libs/appTemplate.js"></script>
 <script src="scripts/libs/index.js"></script>
@@ -155,6 +158,7 @@
 <script src="scripts/controllers/subject.js"></script>
 <script src="scripts/controllers/documentEdit.js"></script>
 <script src="scripts/controllers/document.js"></script>
+<script src="scripts/controllers/modalFeedback.js"></script>
 
 
 <script src="scripts/services/configService.js"></script>
