Termino funcionalidad de feedback

--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,7 @@
 
 <div class="page-container">
   <div ng-view=""></div>
+  <feedback></feedback>
 </div>
 
 <div class="footer">
@@ -148,6 +149,7 @@
 <script src="scripts/app.js"></script>
 
 <script src="scripts/directives/documentItem.js"></script>
+<script src="scripts/directives/feedback.js"></script>
 
 <script src="scripts/controllers/main.js"></script>
 <script src="scripts/controllers/login.js"></script>
@@ -172,6 +174,7 @@
 <script src="scripts/services/languageService.js"></script>
 <script src="scripts/services/entityService.js"></script>
 <script src="scripts/services/documentService.js"></script>
+<script src="scripts/services/feedbackService.js"></script>
 
 <script>
   window.fbAsyncInit = function () {
