--- a/app/index.html
+++ b/app/index.html
@@ -175,6 +175,7 @@
 <script src="scripts/services/entityService.js"></script>
 <script src="scripts/services/documentService.js"></script>
 <script src="scripts/services/feedbackService.js"></script>
+<script src="scripts/services/scoreService.js"></script>
 
 <script>
   window.fbAsyncInit = function () {
