Feedback solo si el usuario esta logueado. Visualizacion de cantidad de puntuaciones de documento si hay mas de una puntuacion

--- a/app/index.html
+++ b/app/index.html
@@ -78,7 +78,7 @@
 
 <div class="page-container">
   <div ng-view=""></div>
-  <feedback></feedback>
+  <feedback ng-if="user != undefined"></feedback>
 </div>
 
 <div class="footer">
