Agrego directiva para manejar las denuncias separado del feedback

--- a/app/index.html
+++ b/app/index.html
@@ -161,6 +161,7 @@
 <script src="scripts/controllers/documentEdit.js"></script>
 <script src="scripts/controllers/document.js"></script>
 <script src="scripts/controllers/modalFeedback.js"></script>
+<script src="scripts/controllers/modalReport.js"></script>
 
 
 <script src="scripts/services/configService.js"></script>
@@ -176,6 +177,7 @@
 <script src="scripts/services/documentService.js"></script>
 <script src="scripts/services/feedbackService.js"></script>
 <script src="scripts/services/scoreService.js"></script>
+<script src="scripts/services/reportService.js"></script>
 
 <script>
   window.fbAsyncInit = function () {
