Agrego la funcionalidad de comentar documentos

--- a/app/index.html
+++ b/app/index.html
@@ -178,6 +178,7 @@
 <script src="scripts/services/feedbackService.js"></script>
 <script src="scripts/services/scoreService.js"></script>
 <script src="scripts/services/reportService.js"></script>
+<script src="scripts/services/commentService.js"></script>
 
 <script>
   window.fbAsyncInit = function () {
