Separo perfil publico del editable por el usuario. Directiva de comentarios

--- a/app/index.html
+++ b/app/index.html
@@ -150,6 +150,7 @@
 
 <script src="scripts/directives/documentItem.js"></script>
 <script src="scripts/directives/feedback.js"></script>
+<script src="scripts/directives/comments.js"></script>
 
 <script src="scripts/controllers/main.js"></script>
 <script src="scripts/controllers/login.js"></script>
