Agrego administrar versiones

--- a/app/index.html
+++ b/app/index.html
@@ -163,6 +163,7 @@
 <script src="scripts/controllers/document.js"></script>
 <script src="scripts/controllers/modalFeedback.js"></script>
 <script src="scripts/controllers/modalReport.js"></script>
+<script src="scripts/controllers/modalVersions.js"></script>
 
 
 <script src="scripts/services/configService.js"></script>
