--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width">
   <link href="styles/font-awesome.min.css" rel="stylesheet" type="text/css"/>
   <link href="styles/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+  <link href="bower_components/jquery-ui/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
   <link href="styles/jquery.fancybox.css" rel="stylesheet"/>
   <link href="styles/rs-style.css" media="screen" rel="stylesheet">
   <link href="styles/settings.css" media="screen" rel="stylesheet">
@@ -122,7 +123,7 @@
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-
+<script src="bower_components/jquery-ui/jquery-ui.js"></script>
 <script src="bower_components/angular-animate/angular-animate.js"></script>
 <script src="bower_components/angular-aria/angular-aria.js"></script>
 <script src="bower_components/angular-cookies/angular-cookies.js"></script>
@@ -164,6 +165,7 @@
 <script src="scripts/controllers/modalFeedback.js"></script>
 <script src="scripts/controllers/modalReport.js"></script>
 <script src="scripts/controllers/modalVersions.js"></script>
+<script src="scripts/controllers/modalShared.js"></script>
 
 
 <script src="scripts/services/configService.js"></script>
