--- a/app/index.html
+++ b/app/index.html
@@ -183,6 +183,7 @@
 <script src="scripts/services/scoreService.js"></script>
 <script src="scripts/services/reportService.js"></script>
 <script src="scripts/services/commentService.js"></script>
+<script src="scripts/services/objectiveService.js"></script>
 
 <script>
   window.fbAsyncInit = function () {
